@@ -37,6 +37,7 @@ import java.util.Spliterator;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicInteger;
+
 import org.testng.annotations.*;
 
 import static org.testng.Assert.*;
@@ -48,8 +49,8 @@ public class TestSharedAccess {
     @Test
     public void testShared() throws Throwable {
         SequenceLayout layout = MemoryLayout.sequenceLayout(1024, ValueLayout.JAVA_INT);
-        try (MemorySession session = MemorySession.openShared()) {
-            MemorySegment s = MemorySegment.allocateNative(layout, session);
+        try (Arena arena = Arena.openShared()) {
+            MemorySegment s = MemorySegment.allocateNative(layout, arena.scope());;
             for (int i = 0 ; i < layout.elementCount() ; i++) {
                 setInt(s.asSlice(i * 4), 42);
             }
@@ -93,12 +94,12 @@ public class TestSharedAccess {
 
     @Test
     public void testSharedUnsafe() throws Throwable {
-        try (MemorySession session = MemorySession.openShared()) {
-            MemorySegment s = MemorySegment.allocateNative(4, 1, session);
+        try (Arena arena = Arena.openShared()) {
+            MemorySegment s = MemorySegment.allocateNative(4, 1, arena.scope());;
             setInt(s, 42);
             assertEquals(getInt(s), 42);
             List<Thread> threads = new ArrayList<>();
-            MemorySegment sharedSegment = MemorySegment.ofAddress(s.address(), s.byteSize(), session);
+            MemorySegment sharedSegment = MemorySegment.ofAddress(s.address(), s.byteSize(), arena.scope());
             for (int i = 0 ; i < 1000 ; i++) {
                 threads.add(new Thread(() -> {
                     assertEquals(getInt(sharedSegment), 42);
@@ -120,8 +121,8 @@ public class TestSharedAccess {
         CountDownLatch a = new CountDownLatch(1);
         CountDownLatch b = new CountDownLatch(1);
         CompletableFuture<?> r;
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment s1 = MemorySegment.allocateNative(MemoryLayout.sequenceLayout(2, ValueLayout.JAVA_INT), session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment s1 = MemorySegment.allocateNative(MemoryLayout.sequenceLayout(2, ValueLayout.JAVA_INT), arena.scope());;
             r = CompletableFuture.runAsync(() -> {
                 try {
                     ByteBuffer bb = s1.asByteBuffer();
