@@ -25,7 +25,7 @@
 /*
  * @test
  * @enablePreview
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
+ * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64" | os.arch == "riscv64"
  * @build NativeTestHelper CallGeneratorHelper TestUpcallHighArity
  *
  * @run testng/othervm/native
@@ -33,16 +33,17 @@
  *   TestUpcallHighArity
  */
 
-import java.lang.foreign.Addressable;
-import java.lang.foreign.Linker;
+import java.lang.foreign.Arena;
 import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.GroupLayout;
+import java.lang.foreign.Linker;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
+import java.lang.foreign.SegmentScope;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
@@ -76,17 +77,17 @@ public class TestUpcallHighArity extends CallGeneratorHelper {
                     S_PDI_LAYOUT, C_INT, C_DOUBLE, C_POINTER)
             );
             MH_passAndSave = MethodHandles.lookup().findStatic(TestUpcallHighArity.class, "passAndSave",
-                    MethodType.methodType(void.class, Object[].class, AtomicReference.class));
+                    MethodType.methodType(void.class, Object[].class, AtomicReference.class, List.class));
         } catch (ReflectiveOperationException e) {
             throw new InternalError(e);
         }
     }
 
-    static void passAndSave(Object[] o, AtomicReference<Object[]> ref) {
+    static void passAndSave(Object[] o, AtomicReference<Object[]> ref, List<MemoryLayout> layouts) {
         for (int i = 0; i < o.length; i++) {
-            if (o[i] instanceof MemorySegment) {
+            if (layouts.get(i) instanceof GroupLayout) {
                 MemorySegment ms = (MemorySegment) o[i];
-                MemorySegment copy = MemorySegment.allocateNative(ms.byteSize(), MemorySession.openImplicit());
+                MemorySegment copy = MemorySegment.allocateNative(ms.byteSize(), SegmentScope.auto());
                 copy.copyFrom(ms);
                 o[i] = copy;
             }
@@ -98,11 +99,11 @@ public class TestUpcallHighArity extends CallGeneratorHelper {
     public void testUpcall(MethodHandle downcall, MethodType upcallType,
                            FunctionDescriptor upcallDescriptor) throws Throwable {
         AtomicReference<Object[]> capturedArgs = new AtomicReference<>();
-        MethodHandle target = MethodHandles.insertArguments(MH_passAndSave, 1, capturedArgs)
+        MethodHandle target = MethodHandles.insertArguments(MH_passAndSave, 1, capturedArgs, upcallDescriptor.argumentLayouts())
                                          .asCollector(Object[].class, upcallType.parameterCount())
                                          .asType(upcallType);
-        try (MemorySession session = MemorySession.openConfined()) {
-            Addressable upcallStub = LINKER.upcallStub(target, upcallDescriptor, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment upcallStub = LINKER.upcallStub(target, upcallDescriptor, arena.scope());
             Object[] args = new Object[upcallType.parameterCount() + 1];
             args[0] = upcallStub;
             List<MemoryLayout> argLayouts = upcallDescriptor.argumentLayouts();
@@ -114,7 +115,7 @@ public class TestUpcallHighArity extends CallGeneratorHelper {
 
             Object[] capturedArgsArr = capturedArgs.get();
             for (int i = 0; i < capturedArgsArr.length; i++) {
-                if (upcallType.parameterType(i) == MemorySegment.class) {
+                if (upcallDescriptor.argumentLayouts().get(i) instanceof GroupLayout) {
                     assertStructEquals((MemorySegment) capturedArgsArr[i], (MemorySegment) args[i + 1], argLayouts.get(i));
                 } else {
                     assertEquals(capturedArgsArr[i], args[i + 1], "For index " + i);
@@ -128,10 +129,10 @@ public class TestUpcallHighArity extends CallGeneratorHelper {
         return new Object[][]{
             { MH_do_upcall,
                 MethodType.methodType(void.class,
-                    MemorySegment.class, int.class, double.class, MemoryAddress.class,
-                    MemorySegment.class, int.class, double.class, MemoryAddress.class,
-                    MemorySegment.class, int.class, double.class, MemoryAddress.class,
-                    MemorySegment.class, int.class, double.class, MemoryAddress.class),
+                    MemorySegment.class, int.class, double.class, MemorySegment.class,
+                    MemorySegment.class, int.class, double.class, MemorySegment.class,
+                    MemorySegment.class, int.class, double.class, MemorySegment.class,
+                    MemorySegment.class, int.class, double.class, MemorySegment.class),
                 FunctionDescriptor.ofVoid(
                     S_PDI_LAYOUT, C_INT, C_DOUBLE, C_POINTER,
                     S_PDI_LAYOUT, C_INT, C_DOUBLE, C_POINTER,
